deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysite-pod
  labels:
    function: webserver
    class: cis-92
spec:
  containers:
  - name: httpd
    image: ghcr.io/ooperlooper/cis-92:milestone-5.0
    resources:
      limits:
        cpu: 500m 
        memory: 512Mi
        ephemeral-storage: 10M
    livenessProbe:
      httpGet:
        path: /polls/
        port: 80
      initialDelaySeconds: 30
      periodSeconds: 30
    ports:
    - containerPort: 80
