deployment/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  volumes:
  - name: db
    persistentVolumeClaim:
      claimName: db
  containers:
  - name: postgres
    image: docker.io/postgres:14.1
    resources:
      limits:
        cpu: 500m 
        memory: 512Mi
        ephemeral-storage: 10M
    ports:
    - containerPort: 5432
    volumeMounts:
    - name: db
      mountPath: /var/lib/postgresql
