deployment/newservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
  labels:
    class: cis-92
  annotations: {      
    externexternal-dns.alpha.kubernetes.io/hostname: "www.donobrien.xyz",
    cloud.google.com/backend-config: '{"default": "gke-health-check"}'
  }
spec:
  type: NodePort
  selector:
    function: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
