deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-service 
  labels:
    class: cis-92
spec:
  type: LoadBalancer
  selector:
    function: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
